# tarpaulin

./: Cargo.toml  README.md
.github/scripts/: ephemeral-crate.sh
.github/workflows/: release.yml  rust.yml
src/: main.rs
