[package]
name = "yt-hello-world"
version = "0.9.11"
authors = ["Yarek T <yarekt@gmail.com>"]
description = "Hello world"
repository = "https://github.com/YarekTyshchenko/hello-world"
license = "MIT"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/{ version }/hello-world-{ target }{ archive-suffix }"
bin-dir = "hello-world{ binary-ext }"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"
